# generativedelay20

./: .gitignore  CMakeLists.txt
Dependencies/LEAF/leaf/: leaf-config.h  leaf.h
Dependencies/LEAF/leaf/Inc/: leaf-delay.h  leaf-distortion.h  leaf-dynamics.h  leaf-effects.h  leaf-envelopes.h  leaf-filters.h  leaf-global.h  leaf-instruments.h  leaf-math.h  leaf-mempool.h  leaf-midi.h  leaf-oscillators.h  leaf-physical.h  leaf-reverb.h  leaf-sampling.h  leaf-tables.h
Dependencies/LEAF/leaf/Src/: leaf-analysis.c  leaf-delay.c  leaf-dynamics.c  leaf-effects.c  leaf-envelopes.c  leaf-filters.c  leaf-instruments.c  leaf-math.c  leaf-mempool.c  leaf-midi.c  leaf-oscillators.c  leaf-physical.c  leaf-reverb.c  leaf-sampling.c  leaf.c
Dependencies/signalsmith/stretch/: signalsmith-stretch.h
JuceLibraryCode/: BinaryData.cpp  BinaryData.h  JuceHeader.h  JucePluginDefines.h
Release/Demo/MacOS/: INSTALLATION INSTRUCTIONS - osx.txt
Release/Demo/MacOS/CounterTune Demo.vst3/Contents/: Info.plist
Release/Demo/MacOS/CounterTune Demo.vst3/Contents/_CodeSignature/: CodeResources
Release/Demo/Win/: INSTALLATION INSTRUCTIONS - win.txt
Release/Full/MacOS/: INSTALLATION INSTRUCTIONS - osx.txt
Release/Full/MacOS/CounterTune.vst3/Contents/Resources/: moduleinfo.json
Release/Full/Win/: INSTALLATION INSTRUCTIONS - win.txt
Release/MacOS/: INSTALLATION INSTRUCTIONS.txt
Release/MacOS/CounterTune Demo.component/Contents/: Info.plist
Release/MacOS/CounterTune Demo.vst3/Contents/Resources/: moduleinfo.json
Release/MacOS/CounterTune.component/Contents/: Info.plist
Release/MacOS/CounterTune.vst3/Contents/: Info.plist
Release/MacOS/CounterTune.vst3/Contents/_CodeSignature/: CodeResources
Resources/FLORALv2/: int_to_note.json  note_to_int.json
Source/: MelodyGenerator.cpp  MelodyGenerator.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
